--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,8 +4,8 @@ database {
   user = "postgres"
   password = "postgres"
 }
-# http-server {
-#   host = "0.0.0.0"
-#   path = "/api/v1"
-#   port = 8080
-# }
+http-server {
+  host = "0.0.0.0"
+  path = "/api/v1"
+  port = 8080
+}
